Updated Website May92019

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,9 +19,37 @@ To add new links, follow the example below (and activate it it by removing the a
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{"/week01" | relative_url }}">Week One</a>
+      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{"/week02" | relative_url }}">Week Two</a>
+    </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{{"/week03" | relative_url }}">Week Three</a>
+  </li>
+<li class="nav-item">
+  <a class="nav-link" href="{{"/week04" | relative_url }}">Week Four</a>
+</li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/posts" | relative_url }}">Blog</a>
-        </li>
+<a class="nav-link" href="{{"/week05" | relative_url }}">Week Five</a>
+</li>
+        <li class="nav-item">
+<a class="nav-link" href="{{"/week06" | relative_url }}">Week Six</a>
+</li>
+        <li class="nav-item">
+<a class="nav-link" href="{{"/week07" | relative_url }}">Week Seven</a>
+</li>
+        <li class="nav-item">
+<a class="nav-link" href="{{"/week08" | relative_url }}">Week Eight</a>
+</li>
+        <li class="nav-item">
+<a class="nav-link" href="{{"/week09" | relative_url }}">Week Nine</a>
+</li>
+        <li class="nav-item">
+<a class="nav-link" href="{{"/week10" | relative_url }}">Week Ten</a>
+</li>
+
 <!--
         <li class="nav-item">
           <a class="nav-link" href="http://example.com">link text</a>
