--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -31,13 +31,12 @@ layout: default
       {{ content }}
 
     </div>
-  </div>
+    <div class="img-magnifier-glass">
+  <img id="myimage" src="img/posts/07.jpg" width="500" height="700" alt="Notary">
 </div>
-<div id="myModal" class="modal">
-  <span class="close">×</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
 </div>
 
 
 <script>
+magnify("Notary", 3);
+</script>
