--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@ To add new links, follow the example below (and activate it it by removing the a
 
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="navbar-brand" href="{{"/" | relative_url }}">{{ ARTHI 999 | escape }}</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -14,7 +14,7 @@ To add new links, follow the example below (and activate it it by removing the a
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/weekoverview" | relative_url }}">Overview</a>
+          <a class="nav-link" href="{{"/overview" | relative_url }}">Overview</a>
         </li>
       <li class="nav-item">
         <a class="nav-link" href="{{"/week01" | relative_url }}">Week One</a>
