--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,27 +7,37 @@
 // Below you can add bits of CSS to override the default settings. I've included a couple to get you started. Just remove the "//" from the beginning of each line to activate it, and refresh your browser. For more information on CSS and how to use it, see https://www.w3schools.com/css/.
 
 // To change the fonts for the headings across the site:
-h1, {
-    font-family: "Segoe Script", Arial, Helvetica, sans-serif;
-    font-size: "200px"
-//    color: #4CAF50
+h1 {
+    font-family: "Segoe Script", Times, Helvetica, sans-serif;
+    font-size: 50px
+    //  color: #4CAF50
 }
-h2, h3, h4, h5 {
-  font-family: "Cambria", Arial, Helvetica, sans-serif;
-  font-size: "75px"
+
+h3 {
+background-image: url("/img/posts/Border.jpg");
+border-style:outset;
+font-family: "Segoe Script", Times, Helvetica, sans-serif;
+font-size: 50px;
+text-align:center
+//  color: #4CAF50
+}
+
+h2, h4, h5 {
+  font-family: "Times", Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  font-style: normal
 }
 
 // If you would like to switch off an entire section of CSS, you can also place /* and */ at each end of a block, like this:
 
-
-// To change the fonts for the main site title:
-/*
 header.masthead .page-heading h1, header.masthead .site-heading h1 {
-    font-family: Palatino, Times, serif;
+    font-family: "Segoe Script", Times, serif;
     font-weight: normal;
-    font-style: italic;
+    font-style: normal;
+    font-size: 50px
+    max-width
 }
-*/
+
 
 // To change the fonts for the main site navigation bar:
 /*
@@ -51,11 +61,11 @@ header.masthead .page-heading h1, header.masthead .site-heading h1 {
 
 // To customise the way that tables look:
 
-/*
+
 table {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: auto;
 }
 
 table td, table th {
@@ -74,6 +84,109 @@ table th {
   background-color: #4CAF50;
   color: white;
 }
-*/
 
-// To see what the above does to tables, just remove those bits.
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#myImg:hover {opacity: 0.7;}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.6s;
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform: scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes zoom {
+  from {transform: scale(0.1)}
+  to {transform: scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
+
+body {
+  background-color: linen;
+}
+
+
+* {box-sizing: border-box;}
+
+.img-magnifier-container {
+  position: relative;
+}
+
+.img-magnifier-glass {
+  position: absolute;
+  border: 3px solid #000;
+  border-radius: 50%;
+  cursor: none;
+  width: 100px;
+  height: 100px;
+}
