--- a/assets/main.scss
+++ b/assets/main.scss
@@ -175,18 +175,38 @@ body {
   background-color: linen;
 }
 
-
 * {box-sizing: border-box;}
 
 .img-magnifier-container {
   position: relative;
 }
-
 .img-magnifier-glass {
   position: absolute;
   border: 3px solid #000;
   border-radius: 50%;
   cursor: none;
+  /*Set the size of the magnifier glass:*/
   width: 100px;
   height: 100px;
+}
+
+* {box-sizing: border-box;}
+
+.img-zoom-container {
+  position: relative;
+}
+
+.img-zoom-lens {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  /*set the size of the lens:*/
+  width: 40px;
+  height: 40px;
+}
+
+.img-zoom-result {
+  border: 1px solid #d4d4d4;
+  /*set the size of the result div:*/
+  width: 300px;
+  height: 300px;
 }
