--- a/assets/main.scss
+++ b/assets/main.scss
@@ -177,10 +177,10 @@ body {
 
 * {box-sizing: border-box;}
 
-.img-magnifier-container {
+img-magnifier-container {
   position: relative;
 }
-.img-magnifier-glass {
+img-magnifier-glass {
   position: absolute;
   border: 3px solid #000;
   border-radius: 50%;
@@ -192,19 +192,18 @@ body {
 
 * {box-sizing: border-box;}
 
-.img-zoom-container {
+img-zoom-container {
   position: relative;
 }
 
-.img-zoom-lens {
+img-zoom-lens {
   position: absolute;
   border: 1px solid #d4d4d4;
-  /*set the size of the lens:*/
   width: 40px;
   height: 40px;
 }
 
-.img-zoom-result {
+img-zoom-result {
   border: 1px solid #d4d4d4;
   /*set the size of the result div:*/
   width: 300px;
