--- a/_layouts/page2.html
+++ b/_layouts/page2.html
@@ -18,12 +18,11 @@ layout: default
           {% if page.description %}
             <span class="subheading">{{ page.description }}</span>
           {% endif %}
-        </div>>
+        </div>
       </div>
     </div>
   </div>
 </header>
-
 
 <div class="container">
   <div class="row">
@@ -113,8 +112,10 @@ function magnify(imgID, zoom) {
 </head>
 <body>
   <div class="img-magnifier-container">
-  <img id="NCBGNotary" src="C:\Users\febgo\febgood109.github.io\img\posts\07.jpg" width="830" height="1195">
+  <img id="NCBGNotary" src="C:\Users\febgo\febgood109.github.io\img\posts\07.jpg" width="415" height="600">
   <script>magnify("NCBGNotary", 2);</script>
 </div>
 </body>
+
+
 <script>
