--- a/assets/main.scss
+++ b/assets/main.scss
@@ -177,17 +177,17 @@ body {
 
 * {box-sizing: border-box;}
 
-img-magnifier-container {
+.img-magnifier-container {
   position: relative;
 }
-img-magnifier-glass {
+.img-magnifier-glass {
   position: absolute;
   border: 3px solid #000;
   border-radius: 50%;
   cursor: none;
   /*Set the size of the magnifier glass:*/
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
 }
 
 * {box-sizing: border-box;}
@@ -196,16 +196,29 @@ img-zoom-container {
   position: relative;
 }
 
-img-zoom-lens {
+.img-zoom-lens {
   position: absolute;
   border: 1px solid #d4d4d4;
   width: 40px;
   height: 40px;
 }
 
-img-zoom-result {
+.img-zoom-result {
   border: 1px solid #d4d4d4;
   /*set the size of the result div:*/
   width: 300px;
   height: 300px;
+}
+.accordion {
+  background-color: antiquewhite;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 75%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+  font-style: Times;
+  transition: 0.4s;
 }
