Updated for Presentation

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -131,7 +131,7 @@ table th {
 
 .lightbox:target {
 	/** Remove default browser outline */
-	outline: none;
+	outline: so;
 
 	/** Unhide lightbox **/
 	display: block;
