--- a/assets/main.scss
+++ b/assets/main.scss
@@ -51,11 +51,11 @@ h6 {
 // If you would like to switch off an entire section of CSS, you can also place /* and */ at each end of a block, like this:
 
 header.masthead .page-heading h1, header.masthead .site-heading h1 {
-    font-family: 'Nothing You Could Do', Times, serif;
-    font-weight: normal;
+    font-family: 'Eagle Lake', Times, serif;
+    font-weight: bold;
     font-style: normal;
-    font-size: 50px
-    max-width
+    font-size: 50px;
+    max-width: 1000px
 }
 body {
   background-color: lightblue;
