--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,7 +34,9 @@ layout: default
   </div>
 </div>
 
+<footer>
+  <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+
 
 
 <script>
-  
