--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,8 @@ layout: default
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
+            {% if site.description %}
+            <span class="subheading">{{ site.description }}</span>
             {% endif %}
           </div>
         </div>
@@ -26,6 +28,7 @@ layout: default
       <div class="col-lg-8 col-md-10 mx-auto">
 
         {{ content }}
+        
       </div>
     </div>
   </div>
