--- a/assets/main.scss
+++ b/assets/main.scss
@@ -133,7 +133,15 @@ table th {
 	max-width: 90%;
 	max-height: 80%;
 	margin-top: 2%;
+
+.caption {
+  font-size: 12;
+  font-family: times;
+  text-align: center
 }
+}
+
+
 
 .lightbox:target {
 	/** Remove default browser outline */
@@ -152,7 +160,6 @@ table th {
     padding-right: 10px;
     background: rgba(0, 0, 0, 0.5)
   }
-
 
 
 $midnight: #2c3e50;
