--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,7 +33,9 @@ h2 {
 h4 {
   font-family: "Times", Arial, Helvetica, sans-serif;
   font-size: 25px;
-  font-style: normal
+  font-style:normal;
+  text-align: justify;
+  font-weight: lighter
 }
 
 h5 {
